--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb://localhost:27017/leaderboardDB
+MONGO_URI = mongodb+srv://ruchi:Ruchi524%23@cluster0.c7xdtv0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
